[Mac] Fix build breakage caused by API deprecation https://bugs.webkit.org/show_bug.cgi?id=144593

* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:
(WebCore::MediaPlaybackTargetPickerMac::showPlaybackTargetPicker): Suppress warnings.


Canonical link: https://commits.webkit.org/162602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183767 268f45cc-cd09-0410-ab3c-d52691b4dbfc